MyFirstForceProject/src/objects/Levi_s_Pants__c.object
<CustomObject>
    <description>Pants list along with description</description>
    <fields>
        <fullName>Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pant_Cloth__c</fullName>
        <defaultValue>&quot;Unspecified&quot;</defaultValue>
        <label>Pant_Cloth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pant_URL__c</fullName>
        <description>URL for product image</description>
        <label>Pant_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pant_discount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Pant_discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pant_price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>price without discount</description>
        <label>Pant_price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pants_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pants_Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Size of the pants</description>
        <label>Pant_Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Levi&apos;s Pants</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Levi&apos;s Pants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>